--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: python
 python:
   - "3.6"
   - "3.7"
-  - "3.8"  # 3.8 development branch
+  # - "3.8"  # 3.8 development branch
   - "3.6-dev"
   - "3.7-dev"  # 3.7 development branch
-  - "3.8-dev"  # 3.8 development branch
+  # - "3.8-dev"  # 3.8 development branch
 
 # command to install dependencies
 install:
