--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
 
 # command to install dependencies
 install:
-  - pip install -r rtd-requirements.txt
+  - pip install -r requirements.txt
   - pip install .
 # command to run tests
 script: pytest
