--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install .
+
 # command to run tests
-script: pytest
+script: pytest --cov=brian2modelfitting
