--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ install:
   - pip install .
 
 # command to run tests
-script: pytest --cov=brian2modelfitting
+script:
+  pytest --cov=brian2modelfitting
+  coveralls
