--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ python:
 
 # command to install dependencies
 install:
+  - pip install pytest-coverage
+  - pip install coveralls
   - pip install -r requirements.txt
   - pip install .
 
