Only send on report to coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,7 @@ install:
 # command to run tests
 script:
   - pytest --cov=brian2modelfitting
-  - coveralls
+
+after_success:
+  - travis_retry coveralls
+  if: env(python) = 3.6
