--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ script:
   - pytest --cov=brian2modelfitting
 
 after_success:
+  - if: env(python) = 3.6
   - travis_retry coveralls
-  if: env(python) = 3.6
