--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,6 @@ script:
   - pytest --cov=brian2modelfitting
 
 after_success:
-  - if: env(python) = 3.6
-  - travis_retry coveralls
+  - if ["$python" == "3.6"]; then
+    travis_retry coveralls;
+  fi
