--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ script:
   - pytest --cov=brian2modelfitting
 
 after_success:
-  - if [ "$python" == "3.6" ]; then
+  - if [ "$TRAVIS_PYTHON_VERSION" == "3.6" ]; then
     travis_retry coveralls;
     fi
