--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,6 @@ target/
 
 # Installation and auto-generated files
 brian2modelfitting.egg-info
+
+# sbi logs
+brian2modelfitting/examples/sbi-logs/
