--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest-coverage coveralls lmfit
+        pip install flake8 pytest-coverage coveralls
         pip install -r requirements.txt
     - name: Lint with flake8
       run: |
