--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,18 +33,6 @@ jobs:
     - name: Update to latest Brian development version
       run: python -m pip install -i https://test.pypi.org/simple/ --pre --upgrade Brian2
       if: ${{ matrix.latest-brian }}
-    - name: Lint with flake8
+    - name: run test script
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest --cov=brian2modelfitting
-    - name: Upload coverage to coveralls
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      if: ${{ matrix.python-version == '3.7' }}
-      run: coveralls --service=github
-
+        PYTHONPATH=. python examples/test_script.py
