--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [project]
 name = "brian2modelfitting"
-version = "0.5.dev0"  # TODO: use setuptools_scm
 authors = [
     {name = 'Aleksandra Teska'},
     {name = 'Ante Kapetanovic'},
@@ -14,7 +13,7 @@ dependencies = [
     'tqdm',
     'pandas',
 ]
-dynamic = ["readme"]
+dynamic = ["readme", "version"]
 description = 'Modelfitting Toolbox for the Brian 2 simulator'
 keywords = ['computational neuroscience', 'model fitting', 'brian2']
 classifiers = [
@@ -56,6 +55,13 @@ readme = {file = 'README.md', content-type = "text/markdown"}
 
 [build-system]
 requires = [
-    "setuptools>=61",
+    "setuptools>=64",
+    "setuptools-scm>=8.0",
 ]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools_scm]
+version_scheme = 'post-release'
+local_scheme = 'no-local-version'
+fallback_version = 'unknown'
+version_file = "brian2modelfitting/_version.py"
