--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,20 +16,20 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.9]
+        python-version: [3.7, 3.11]
         latest-brian: [true, false]
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install brian2modelfitting
       run: |
         python -m pip install --upgrade pip wheel
         python -m pip install flake8 pytest-coverage coveralls
-        python -m pip install -r requirements.txt
+        python -m pip install ".[all]"
     - name: Update to latest Brian development version
       run: python -m pip install -i https://test.pypi.org/simple/ --pre --upgrade Brian2
       if: ${{ matrix.latest-brian }}
