--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ docs = ['sphinx>=1.8']
 nevergrad = ['pytest', 'pytest-xdist>=1.22.3']
 skopt = ['scikit-optimize']
 efel = ['efel']
-sbi = ['sbi>=0.16.0', 'torch>=1.9,<1.10']
+sbi = ['sbi>=0.16.0']
 all = ['brian2modelfitting[test]',
        'brian2modelfitting[docs]',
        'brian2modelfitting[nevergrad]',
@@ -55,8 +55,8 @@ readme = {file = 'README.md', content-type = "text/markdown"}
 
 [build-system]
 requires = [
-    "setuptools>=64",
-    "setuptools-scm>=8.0",
+    "setuptools>=61",
+    "setuptools-scm[toml]>=8.0",
 ]
 build-backend = "setuptools.build_meta"
 
