--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,6 +44,6 @@ jobs:
     - name: Upload coverage to coveralls
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      if: ${{ matrix.python-version == '3.7' }}
+      if: ${{ matrix.python-version == '3.8' && !matrix.latest-brian }}
       run: coveralls --service=github
 
