--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     'numpy>=1.21',
     'brian2>=2.2',
     'nevergrad>=0.4',
+    'scikit-learn>=0.22',
     'tqdm',
     'pandas',
 ]
