--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install brian2modelfitting
       run: |
         python -m pip install --upgrade pip wheel
-        python -m pip install flake8 pytest-coverage coveralls
+        python -m pip install flake8 pytest-coverage pytest-timeout coveralls
         python -m pip install ".[all]"
     - name: Update to latest Brian development version
       run: python -m pip install -i https://test.pypi.org/simple/ --pre --upgrade Brian2
@@ -40,7 +40,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest --cov=brian2modelfitting
+        pytest --timeout=60 --cov=brian2modelfitting
     - name: Upload coverage to coveralls
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
