--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
         python -m pip install flake8 pytest-coverage pytest-timeout coveralls
         python -m pip install ".[all]"
     - name: Update to latest Brian development version
-      run: python -m pip install -i https://test.pypi.org/simple/ --pre --upgrade Brian2
+      run: python -m pip install --extra-index-url https://test.pypi.org/simple/ --pre --upgrade Brian2
       if: ${{ matrix.latest-brian }}
     - name: Lint with flake8
       run: |
