--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,33 +40,34 @@ jobs:
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
       with:
         fetch-depth: 0
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install uv
+      uses: astral-sh/setup-uv@v7
+      with:
+        enable-cache: true
     - name: Install brian2modelfitting
-      run: |
-        python -m pip install --upgrade pip wheel
-        python -m pip install flake8 pytest-coverage pytest-timeout coveralls
-        python -m pip install ".[all]"
+      run: uv sync --no-build --all-extras        
     - name: Update to latest Brian development version
-      run: python -m pip install -i https://test.pypi.org/simple/ --pre --upgrade Brian2
+      run: uv pip install -i https://test.pypi.org/simple/ --pre --upgrade Brian2
       if: ${{ matrix.latest-brian }}
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    # - name: Lint with flake8
+    #   run: |
+    #     # stop the build if there are Python syntax errors or undefined names
+    #     flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+    #     # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+    #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest --timeout=60 --cov=brian2modelfitting
+        uv run --no-sync --frozen pytest --timeout=60 --cov=brian2modelfitting
     - name: Upload coverage to coveralls
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      if: ${{ matrix.python-version == '3.8' && !matrix.latest-brian }}
+      if: ${{ matrix.python-version == needs.get_python_versions.outputs.min-python }}
       run: coveralls --service=github
 
