--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
-test = ['pytest']
+test = ['pytest', 'pytest-coverage', 'pytest-timeout']
 docs = ['sphinx>=1.8']
 algos = [  # additional optimizers for nevergrad
          'cma>=3.0', 'fcmaes', 'loguru',  # loguru seems to be an undeclared dependency of fcmaes
