--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ test = ['pytest', 'pytest-coverage', 'pytest-timeout']
 docs = ['sphinx>=1.8']
 algos = [  # additional optimizers for nevergrad
          'cma>=3.0', 'fcmaes', 'loguru',  # loguru seems to be an undeclared dependency of fcmaes
-         'nlopt',
+        #  'nlopt',
          'poap',
          'ConfigSpace']
 skopt = ['scikit-optimize']
